[gd_scene load_steps=2 format=3 uid="uid://bgdrv108iaqmw"]

[ext_resource type="Script" path="res://Scenes/snake/snake.gd" id="1_q21vv"]

[node name="snake" type="Node2D"]
script = ExtResource("1_q21vv")

[node name="snake_parts" type="Node" parent="."]

[node name="weapon_parts" type="Node" parent="."]

[node name="health_label" type="Label" parent="."]
visible = false
z_index = 2
offset_left = -12.0
offset_top = -48.0
offset_right = 28.0
offset_bottom = -22.0
theme_override_colors/font_color = Color(0.858824, 0, 0, 1)
text = "3/3"

[node name="health_timer" type="Timer" parent="health_label"]
wait_time = 2.0
one_shot = true
